# NanoQuant

./: .gitignore  AGENTS.md  README.md  RUNPOD.md  pyproject.toml
Docs/: 00-current-state.md  01-requirements.md  02-architecture.md  02-domain-and-stage-contracts.md  03-configuration-and-runs.md  03-configuration-reference.md  04-execution-and-scaling.md  05-fast-prototyping.md  06-inference-runtime.md  07-observability-and-reporting.md  08-evaluation.md  09-testing-and-quality.md  10-artifacts-and-compatibility.md  11-delivery-roadmap.md  12-lessons-carried-forward.md  13-implementation-task-list.md  14-artifact-retention-and-disk-usage.md  15-performance-profiling.md  16-behavior-preserving-optimizations.md  17-vram-diagnostics.md  18-legacy-quantization-performance-and-vram-investigation.md  19-nanoquant-packed-layout-v1.md  20-inference-performance-protocol.md  21-weight-reconstruction-overview.md  22-base-compression-recipe.md  22-legacy-experiment-migration-inventory.md  23-gemma-1b-parity-completion-audit.md  24-experiment-004-vproj-rank-expansion.md  25-experiment-005-vproj-maximum-rank.md  26-experiment-definition-relocation.md  27-experiment-006-gemma-1b-attention-rank-baseline.md  28-experiment-007-gemma-270m-quality-benchmark.md  29-standardized-experiment-definitions-and-layout.md  30-reconstruction-informed-rank-planning.md  31-stacked-shared-input-factorization.md  32-test-suite-value-and-runtime-audit.md  33-error-budget-driven-quality-improvements.md  34-adaptive-memory-planning-and-execution.md  35-adaptive-memory-real-model-validation.md  CodeCleanupTasks.md  (+11 more)
Results/: .gitignore  README.md
experiments/: 000_experiment_template.py  001-compress-gemma-3-1b-it.py  002-benchmark-gemma-3-1b-it.py  003-compress-and-benchmark-gemma-3-4b-it.py  003-evaluate-gemma-3-1b-it-quality.py  004-gemma-3-4b-it-vproj-plus30.py  005-gemma-3-4b-it-vproj-double-request.py  006-compress-and-benchmark-gemma-3-1b-it.py  007-compress-and-benchmark-gemma-3-270m-it.py  008-compress-and-benchmark-gemma-3-12b-it.py  008-compress-gemma-3-1b-it-free-residual-outliers.py  009-compress-benchmark-and-publish-gemma-3-270m-it.py  010-compress-and-benchmark-gemma-3-270m-it.py  011-benchmark-generation-tps.py  011-compress-and-benchmark-gemma-3-1b-it.py  012-compress-and-benchmark-gemma-3-1b-it.py  013-compress-and-benchmark-gemma-3-270m-it.py  013-compress-gemma-3-1b-it-free-residual-Improved.py  014-compress-and-benchmark-gemma-3-270m-it.py  015-compress-and-benchmark-gemma-3-270m-it.py  016-compress-and-benchmark-gemma-3-270m-it.py  017-compress-and-benchmark-gemma-3-1b-it.py  018-compress-and-benchmark-gemma-3-4b-it.py  018-compress-gemma-3-1b-it-phase1-no-hessian.py  019-compress-and-benchmark-llama-3-2-1b-instruct.py  021-d2-kl-compress-and-benchmark-gemma-3-270m-it.py  022-d2-kl-compress-and-benchmark-gemma-3-1b-it.py  023-d2-kl-interaction-tuned-compress-and-benchmark-gemma-3-1b-it.py  024-best-methods-compress-and-benchmark-gemma-3-1b-it.py  025-compress-and-benchmark-llama-3-2-1b-instruct.py  026-compress-and-benchmark-llama-3-2-3b-instruct.py  027-compress-and-benchmark-meta-llama-3-8b-instruct.py
packaging/runtime/: pyproject.toml
packaging/runtime/src/nanoquant/: __init__.py
tests/: __init__.py  conftest.py
tools/: _paths.py  backfill_global_tuning_block_snapshots.py  benchmark_adaptive_memory.py  benchmark_events.py  benchmark_llamacpp.py  benchmark_llamacpp_generation.py  benchmark_runtime.py  calibrate_gemma_fisher_chunk.py  capture_m0_baseline.py  cleanup_artifacts.py  cleanup_logical_artifact.py  (+53 more)
(+451 files in other folders)
