[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoquant-rewrite"
version = "0.1.0"
description = "Auditable, resumable NanoQuant research and deployment pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
  "PyYAML>=6.0",
  "huggingface-hub>=0.30,<1",
  "safetensors>=0.4",
  "torch>=2.6",
  "transformers==4.51.3",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
]
evaluation = [
  "datasets==5.0.0",
]

[project.scripts]
nanoquant = "nanoquant.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["nanoquant"]
