[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoquant-rewrite"
version = "0.1.0"
description = "Auditable, resumable NanoQuant research and deployment pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
  "PyYAML>=6.0",
  "cut-cross-entropy==25.1.1",
  "huggingface-hub>=0.30,<1",
  "python-dotenv>=1.0,<2",
  "safetensors>=0.4",
  "sentencepiece>=0.2,<1",
  "torch>=2.6",
  "transformers==4.51.3",
  "triton-windows==3.7.1.post27; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
]
evaluation = [
  "datasets==5.0.0",
]
visualization = [
  "reportlab>=4.0",
]

[project.scripts]
nanoquant = "nanoquant.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = '-ra -m "not cuda and not external_data and not performance"'
testpaths = ["tests"]
pythonpath = [".", "experiments", "tools"]
markers = [
  "cuda: requires exclusive access to a physical CUDA device",
  "external_data: requires optional pinned model or dataset caches and must stay offline",
  "integration_cpu: crosses multiple production components or persisted boundaries on CPU",
  "performance: dedicated timing or resource regression protocol",
  "slow: intentionally expensive coverage excluded from the fastest feedback tier",
  "subprocess: starts or coordinates a separate process",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["tools/llamacpp/convert_nanoquant_to_gguf.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["nanoquant"]
mypy_path = ["src", "experiments"]
